--- a/ბეგა_I_სურამელი.mw
+++ b/ბეგა_I_სურამელი.mw
@@ -1,4 +1,4 @@
-'''ბეგა I სურამელი''', XII საუკუნის II ნახევრის მოღვაწე [[ქართველები|ქართველი]] დიდგვაროვანი ფეოდალი. ისტორიული წყაროებით, სურამელთა გვარის ყველაზე ადრინდელი წარმომადგენელი, თან ახლდა [[ გიორგი III, საქართველოს მეფე|გიორგი III-ს]] ანისთან თურქთა სულხან არდოხის ძის წინააღმდეგ ბრძოლაში. [[გიორგი IV ლაშა|ლაშა გიორგის]] ერთი სიგელის ცნობით, მისთვის გიორგი III-ს უწყალობებია ქართლის სოფელი სუელნეთი. სურამელის ვაჟი იყო ქართლის [[ერისთავი (თანამდებობა)|ერისთავი]] [[სურამელი, რატი|რატი]].
+'''ბეგა I სურამელი''', XII საუკუნის II ნახევრის მოღვაწე [[ქართველები|ქართველი]] დიდგვაროვანი ფეოდალი. ისტორიული წყაროებით, სურამელთა გვარის ყველაზე ადრინდელი წარმომადგენელი, თან ახლდა [[ გიორგი III, საქართველოს მეფე|გიორგი III-ს]] ანისთან თურქთა სულხან არდოხის ძის წინააღმდეგ ბრძოლაში. [[გიორგი IV ლაშა|ლაშა გიორგის]] ერთი სიგელის ცნობით, მისთვის გიორგი III-ს უწყალობებია ქართლის სოფელი სუელნეთი. სურამელის ვაჟი იყო ქართლის [[ერისთავი (თანამდებობა)|ერისთავი]] [[სურამელი, რატი I|რატი]].
 
 
 [[კატეგორია:ქართველები]]
