--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -17,7 +17,7 @@
 
 მეორე ბრძოლა მდინარე ანიენის პირას გაიმართა. ჯარის გაძლიერებასთან ერთად რომაელებმა გამოიყენეს ეშმაკობაც: წინასწარ გაგზავნეს ხალხი, რომლებმაც მდინარის პირას მიმოფანტულ მორებს ცეცხლი წაუკიდეს და ტივებით წყალში გაუშვეს, ქარმა გააღვივა ცეცხლი, ტივები კი ხიდის ბურჯებში გაიჩხირა. ხიდს ცეცხლი წაეკიდა. ამან შეაშინა საბინელები და გაქცევაში ხელი შეუშალა. მდინარეში ჩაძირული საბინებელის აღჭურვილობა დინებამ რომთან გამოიტანა, ამრიგად ქალაქში გამარჯვების შესახებ უფრო ადრე შეიტყვეს ვიდრე ლაშქარი დაბრუნდა. თვითონ ბრძოლაში კი მხედრებმა გამოიჩინეს თავი.
 
-ამ ომის შედეგად რომაელებმა საბინელებს კოლაცია (რომიდან 7-8კმ აღმოსავლეთით) წაართვეს.
+ამ ომის შედეგად რომაელებმა საბინელებს კოლაცია (რომიდან 7-8კმ აღმოსავლეთით) წაართვეს. საბინელებთან ომის შემდეგ, ტარკვინიუსი ტრიუმფით დაბრუნდა რომში. ამის შემდეგ მან ძველი ლათინების წინააღმდეგ გაილაშქრა.
 
 ==რესურსები ინტერნეტში==
 
