--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -19,6 +19,12 @@
 
 ამ ომის შედეგად რომაელებმა საბინელებს კოლაცია (რომიდან 7-8კმ აღმოსავლეთით) წაართვეს. საბინელებთან ომის შემდეგ, ტარკვინიუსი ტრიუმფით დაბრუნდა რომში. ამის შემდეგ მან ძველი ლათინების წინააღმდეგ გაილაშქრა. ამ ომში დიდი ბრძოლები არ მოხდა, მეფემ სათითაოდ აიღო ლათინების ქალაქები და ასე დაიპყრო მთელი ერი.
 
+ომების დასრულების შემდეგ მან ააშენა ქალაქის გარშემო ქვის გალავანი, დააშრო ფორუმის გარშემო დაბალიადილები და ააშენა დრენაჟების სისტემა, რათა ტიბრის ადიდებისას წყალდიდობები აეცილებინა თავიდან. [[კაპიტოლიუმი|კაპიტოლიუმზე]] მან [[იუპიტერი კაპიტოლიუმზე|იუპიტერის ტაძრის]] მშენებლობა დაიწყო.
+
+ტარკვინიუსმა დაიახლოვა და აღზარდა როგორც საკუთარი შვილი, მის სახლში მცხოვრები მონაქალის ვაჟი [[სერვიუს ტულიუსი]]. მოგიანებით კი მან თავისი ქალიშვილი გაათხოვა შვილობილზე. ანკუს მარციუსის ვაჟები თვლიდნენ რომ ტარკვინიუსმა მათ მამის ტახტი უკანონოდ წაართვა, ხოლო ის რომ მისი მემკვიდრე მონად დაბადებული შეიძლებოდა გამხდარიყო, მათ აღმაშფოთებლად მიაჩნდათ. ამიტომ მათ განიძრახეს მეფის მოკვლა და ძალაუფლების ხელში ჩაგდება.
+
+ამ მიზნისთვის მათ ორი თავზეხელაღებული მწყემსი აირჩიეს. მწყემსებმა სასახლის წინ საშინელი აყალმაყალი ატეხეს და მეფეს მოუხმობდნენ. როდესაც მეფემ ეს გაიგო, მან ბრძანა შემოეშვათ მწყემსები. მათ მეფის წინაშეც განაგრძეს წივილ კივილი, ლიქტორებმა ისინი დააშოშმინა და უბრძანა რიგრიგობით ელაპარაკათ. პირველმა მწყემსმა წინასწარ გამზადებული ისტორიის მოყოლა დაიწყო, სანამ მეფე მას ყურადღებით უსმენდა, მეორე მწყემსმა ნაჯახი ამოიღო და ტარკვინიუსს თავში ჩაარტყა.
+
 ==რესურსები ინტერნეტში==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
