--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -25,6 +25,8 @@
 
 ამ მიზნისთვის მათ ორი თავზეხელაღებული მწყემსი აირჩიეს. მწყემსებმა სასახლის წინ საშინელი აყალმაყალი ატეხეს და მეფეს მოუხმობდნენ. როდესაც მეფემ ეს გაიგო, მან ბრძანა შემოეშვათ მწყემსები. მათ მეფის წინაშეც განაგრძეს წივილ კივილი, ლიქტორებმა ისინი დააშოშმინა და უბრძანა რიგრიგობით ელაპარაკათ. პირველმა მწყემსმა წინასწარ გამზადებული ისტორიის მოყოლა დაიწყო, სანამ მეფე მას ყურადღებით უსმენდა, მეორე მწყემსმა ნაჯახი ამოიღო და ტარკვინიუსს თავში ჩაარტყა.
 
+მწყემსები იქვე შეიპყრეს, მაგრამ მეფე სასიკვდილოდ იყო დაჭრილი. ტარანკვილმა ბრძანა ჩაეკეტათ სასახლე და არავინ არ შემოეშვებინათ. როდესაც იგი დარწმუნდა რომ ქმარი კვდება, მან მიმართა სერვიუსს ტულუსს, რათა მეფის სიკვდილი არ დარჩენილიყო დაუსჯელი. ტარანკვილმა ყველაფერი იღონა რათა სიძე გამხდარიყო მეფე, და მხოლოდ ამის შემდეგ ამცნო ხალხს ტარკვინიუსის გარდაცვალების შესახებ.
+
 ==რესურსები ინტერნეტში==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
