--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -1,5 +1,5 @@
 '''სერვიუს ტულიუსი''' (''[[ლათინური ენა|ლათ.]]'' Servius Tullius) (*უცნობია ―   †  
-[[ძვ. წ. 535]], მოკლულ იქნა), რომის მეექვსე მეფე (ძვ. წ.578 - ძვ. წ. 534/5344)
+[[ძვ. წ. 535]], მოკლულ იქნა), რომის მეექვსე მეფე (ძვ. წ.578 - ძვ. წ. 534)
 
 ==წარმოსვება და გამეფება==
 
