/* წარმოსვება და გამეფება */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -1,8 +1,9 @@
 '''სერვიუს ტულიუსი''' (''[[ლათინური ენა|ლათ.]]'' Servius Tullius) (*უცნობია ―   †  
 [[ძვ. წ. 535]], მოკლულ იქნა), რომის მეექვსე მეფე (ძვ. წ.578 - ძვ. წ. 534)
 
-==წარმოსვება და გამეფება==
+==წარმოშვება და გამეფება==
 
+სერვიუს ტულიუსი წარმოშვებით ლათინური ქალაქ [[კორნიკულუსი|კორნიკულუსიდან]] იყო. მამამისი სტურიუს ტულიუსი, ქალაქის ერთერთი საუკეთესო მოქალაქე, რომაელებთან ბრძოლაში დაიღუპა, როდესაც [[ტარკვინიუსი,_ლუციუს_პრისკუს|ტარკვინიუს პრისკუსმა]] აიღო ქალაქი.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
