/* წარმოშვება და გამეფება */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -3,7 +3,9 @@
 
 ==წარმოშვება და გამეფება==
 
-სერვიუს ტულიუსი წარმოშვებით ლათინური ქალაქ [[კორნიკულუსი|კორნიკულუსიდან]] იყო. მამამისი სტურიუს ტულიუსი, ქალაქის ერთერთი საუკეთესო მოქალაქე, რომაელებთან ბრძოლაში დაიღუპა, როდესაც [[ტარკვინიუსი,_ლუციუს_პრისკუს|ტარკვინიუს პრისკუსმა]] აიღო ქალაქი.
+სერვიუს ტულიუსი წარმოშვებით ლათინური ქალაქ [[კორნიკულუსი|კორნიკულუსიდან]] იყო. მამამისი სტურიუს ტულიუსი, ქალაქის ერთერთი საუკეთესო მოქალაქე, რომაელებთან ბრძოლაში დაიღუპა, როდესაც [[ტარკვინიუსი,_ლუციუს_პრისკუს|ტარკვინიუს პრისკუსმა]] აიღო ქალაქი. ფეხმძიმე დედამისი ტყვედ ჩავარდა. ტარკვინიუსის მეუღლემ ამოუცნო იგი ტყვეებს შორის და საკუთარ სახლში მიიღო. აქ დაიბადა რომის მომავალი მეფე სერვიუს ტულიუსი. ბავშვობიდანვე ჩანდა რომ იგი ძალიან ჭკვიანი და ნიჭიერია, ამიტომ მეფემ იგი როგორც საკუთარი შვილი ისე გაზარდა, მას ქალისვილი მიათხოვა და თავის მემკვიდრეთ განიხილავდა.
+
+ტარკვინიუსზე თავდასხმის შემდეგ ტანაკვილმა დამალა მისი სიკვდილის ფაქტი და მეფის ავადმყოფობის გამო მისი მოვალეობების შემსრულებლად სერვიუსი გამოაცხადა.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
