--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -7,6 +7,11 @@
 
 ტარკვინიუსზე თავდასხმის შემდეგ ტანაკვილმა დამალა მისი სიკვდილის ფაქტი და მეფის ავადმყოფობის გამო მისი მოვალეობების შემსრულებლად სერვიუსი გამოაცხადა. რამდენიმე დღე სერვიუსი ასრულებდა მეფის ფუნქციებს, ზოგ გადაწყვეტილებებს თვითონ იღებდა, ზოგს კი სამომავლოდ დებდა, ვითომდა მეფესთან უნდა მოეთათბირებინა. ამრიგად როდესაც ტარკვინიუსის სიკვდილის ფაქტი გახმაურდა სერვიუსის მდგომარეობა ტახტზე უკვე მყარი იყო.
 
+==მმართველობა და რეფორმები==
+
+==მკვლელობა==
+
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
