/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -9,6 +9,8 @@
 
 ==მმართველობა და რეფორმები==
 
+სერვიუსმა თავისი ქალიშვილები ტარკვინიუსის ვაჟებზე გაათხოვა, რათა არ გამეორებულიყო იგივე ამბავი რაც ტარკვინიუსსა და [[ანკუს მარციუსი|ანკუს მარციუსის]] ვაჟებს შორის მოხდა, მაგრამ ამ ზომებმა მომავალსი არ გაამართლა.
+
 ==მკვლელობა==
 
 
