/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -11,6 +11,11 @@
 
 სერვიუსმა თავისი ქალიშვილები ტარკვინიუსის ვაჟებზე გაათხოვა, რათა არ გამეორებულიყო იგივე ამბავი რაც ტარკვინიუსსა და [[ანკუს მარციუსი|ანკუს მარციუსის]] ვაჟებს შორის მოხდა, მაგრამ ამ ზომებმა მომავალსი არ გაამართლა.
 
+ეტრუსკებთან ზავის ვადა ამოიწურა, ამიტომ მან განაახლა მათთან ომი, სადაც ბრწყინვალეთ გაიმარჯვა. ამის შემდეგ იგი სამოქალაქო რეფორმებს შეუდგა, მან ჩამოაყალიბა მოსახლეობის ქონებრივი ცენზით დაყოფა, ეს მნიშვნელოვანი იყო, ვინაიდან მანამდე მოვალეობების დაკისრება ხდებოდა სულ მოსახლეზე, ახლა კი ქონებრივი ცენზის მიხედვით.
+
+* მათთგან, ვისი ქონებაც 100 000 [[რომაული ფულადი სისტემა|ასს]] აღემატებოდა, სერვიუსმა 80 ცენტურიონი ჩამოაყალიბა, 40 უფროსი ასაკის, 40 უმცროსის (უფროსი ასაკი - 46-60, უმცროსი - 18-45). უფროსებს ქალაქის თავდაცვაზე უნდა ეზრუნათ, ხოლო უმცროსები ქალაქის გარეთ საომარ მზადყოფნაში უნდა ყოფილიყვნენ. იარაღით მათ საკუთარი თავი თვითონ უნდა უზრუნველყოთ. ორი ცენტურიონი აიარაღის დარეშე იყო, მათ საომარი მანქანები უნდა მიეწოდებინათ ჯარისთვის.
+* მეორე კატეგორიას მიეკუთვნენ ვისი ქონებაც 75 000-დან 100 000 ასამდე იყო.
+
 ==მკვლელობა==
 
 
