/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -14,7 +14,12 @@
 ეტრუსკებთან ზავის ვადა ამოიწურა, ამიტომ მან განაახლა მათთან ომი, სადაც ბრწყინვალეთ გაიმარჯვა. ამის შემდეგ იგი სამოქალაქო რეფორმებს შეუდგა, მან ჩამოაყალიბა მოსახლეობის ქონებრივი ცენზით დაყოფა, ეს მნიშვნელოვანი იყო, ვინაიდან მანამდე მოვალეობების დაკისრება ხდებოდა სულ მოსახლეზე, ახლა კი ქონებრივი ცენზის მიხედვით.
 
 * მათთგან, ვისი ქონებაც 100 000 [[რომაული ფულადი სისტემა|ასს]] აღემატებოდა, სერვიუსმა 80 ცენტურიონი ჩამოაყალიბა, 40 უფროსი ასაკის, 40 უმცროსის (უფროსი ასაკი - 46-60, უმცროსი - 18-45). უფროსებს ქალაქის თავდაცვაზე უნდა ეზრუნათ, ხოლო უმცროსები ქალაქის გარეთ საომარ მზადყოფნაში უნდა ყოფილიყვნენ. იარაღით მათ საკუთარი თავი თვითონ უნდა უზრუნველყოთ. ორი ცენტურიონი აიარაღის დარეშე იყო, მათ საომარი მანქანები უნდა მიეწოდებინათ ჯარისთვის.
-* მეორე კატეგორიას მიეკუთვნენ ვისი ქონებაც 75 000-დან 100 000 ასამდე იყო.
+* მეორე კატეგორიას მიეკუთვნენ ვისი ქონებაც 75 000-დან 100 000 ასამდე იყო. მათგან, უფროსებისგან და უმცროსებისგან შედგა ოცი ცენტურიონი. შეიარაღება პირველ კატეგორიაზე ცოტა მსუბუქი.
+* მესამე კატეგორიას მიეკუთვნენ ვისი ქონებაც 50 000 ასს აღემატებოდა. მათგანაც ოცი ცენტურიონი ჩამოყალიბდა. შეიარაღება იგივე.
+* მეოთხე კატეგორიის ცენზი იყო 25 000 ასზე მეტი. მათგანაც ოცი ცენტურიონი ჩამოყალიბდა. შეიარაღებიდან მხოლოდ შუბი უნდა ჰქონოდათ.
+* მეხუთე კატეგორიის ცენზი 11 000 ასი იყო. მათგან 35 ცენტურიონი ჩამოყალიბდა. მეომრებს მხოლოდ სატყორცნი ქვები უნდა ჰქონოდათ. 
+
+ვინც ამ ხუთ კატეგორიაში ვერ შევიდა, ისინი სამხედრო სამსახურისგან თავისუფლები იყვნენ. ამ სისტემამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამდე იმუშავა.
 
 ==მკვლელობა==
 
