/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -19,7 +19,7 @@
 * მეოთხე კატეგორიის ცენზი იყო 25 000 ასზე მეტი. მათგანაც ოცი ცენტურიონი ჩამოყალიბდა. შეიარაღებიდან მხოლოდ შუბი უნდა ჰქონოდათ.
 * მეხუთე კატეგორიის ცენზი 11 000 ასი იყო. მათგან 35 ცენტურიონი ჩამოყალიბდა. მეომრებს მხოლოდ სატყორცნი ქვები უნდა ჰქონოდათ. 
 
-ვინც ამ ხუთ კატეგორიაში ვერ შევიდა, ისინი სამხედრო სამსახურისგან თავისუფლები იყვნენ. ამ სისტემამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამდე იმუშავა.
+ვინც ამ ხუთ კატეგორიაში ვერ შევიდა, ისინი სამხედრო სამსახურისგან თავისუფლები იყვნენ. ამ სისტემამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამდე იმუშავა. ზემოთხსენებული ცენტურიონების გარდა სერვიუსმა ჩამოაყალიბა 12 ცხენოსანთა ცენტურიონი. ცხენოსნებს სახელმწიფო ხაზინიდან გამოეყოთ 10 000 ასი ცხენების შესაძენად, ხოლო ცხენების შენახვა გაუთხოვარ ქალებს ევალებოდათ, ამ მიზნისთვის მათ ხაზინაში ყოველწლიურად 2000 ასი უნდა შეეტანათ.
 
 ==მკვლელობა==
 
