/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -21,6 +21,8 @@
 
 ვინც ამ ხუთ კატეგორიაში ვერ შევიდა, ისინი სამხედრო სამსახურისგან თავისუფლები იყვნენ. ამ სისტემამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამდე იმუშავა. ზემოთხსენებული ცენტურიონების გარდა სერვიუსმა ჩამოაყალიბა 12 ცხენოსანთა ცენტურიონი. ცხენოსნებს სახელმწიფო ხაზინიდან გამოეყოთ 10 000 ასი ცხენების შესაძენად, ხოლო ცხენების შენახვა გაუთხოვარ ქალებს ევალებოდათ, ამ მიზნისთვის მათ ხაზინაში ყოველწლიურად 2000 ასი უნდა შეეტანათ.
 
+ამრიგად ღარიბი მოსახლეობის მაგივრად მდიდრებს უნდა შეენახად ჯარი. ცენზები სამხედრო მოვალეობის შესრულების გარდა ხმის მიცემის სისტემასაც შეეხო. ადრე ყველას ერთნაერად ჰქონდა კენჭისყრის უფლება, ახლა კი ჯერ ცხენოსანთა ცენტურიონი იყრიდა კენჭს, შემდეგ პირველი კატეგორიის ოთხმოცი ცენტურიონი, თუ მათი აზრები არ ემთხვეოდა, მაშინ კენჭს მეორე კატეგორიის ცენტურიონები ყრიდნენ,
+
 ==მკვლელობა==
 
 
