/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -23,6 +23,7 @@
 
 ამრიგად ღარიბი მოსახლეობის მაგივრად მდიდრებს უნდა შეენახად ჯარი. ცენზები სამხედრო მოვალეობის შესრულების გარდა ხმის მიცემის სისტემასაც შეეხო. ადრე ყველას ერთნაერად ჰქონდა კენჭისყრის უფლება, ახლა კი ჯერ ცხენოსანთა ცენტურიონი იყრიდა კენჭს, შემდეგ პირველი კატეგორიის ოთხმოცი ცენტურიონი, თუ მათი აზრები არ ემთხვეოდა, მაშინ კენჭს მეორე კატეგორიის ცენტურიონები ყრიდნენ და ა.შ. ყველაზე ქვედა ფენამდე კენჭისყრა თითქმის ვერასროს ვერ აღწევდა.
 
+[[სურათი:Regiones Quattuor.gif|thumb|რომის ოთხ ტრიბად გაყოფის სქემა]]
 მეფემ ქალაქი დაყო ოთხ ნაწილად - ტრიბებად. ამ ტრიბებს თავდაპირველ სამ ტრიბთან საერთო არაფერი აღარ ჰქონდათ.
 
 ==მკვლელობა==
