--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -21,7 +21,7 @@
 
 უძველესი რომის მოსახლეობა იყოფებოდა 300 გვარად, ყოველი 10 გვარი გაერთიანებული იყო კურიად, ხოლო 10 კურია - ტრიბად. ამგვარად სულ 3 ტრიბი იყო.
 
-==რომის მეფეები==
+==რომის მეფეები რომულუსის შემდეგ==
 
 <table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse; font-size: 95%;">
     <th COLSPAN=44 BGCOLOR="#DC143C">რომის მეფეები<tr>
@@ -49,11 +49,11 @@
 
 ამ ტრაგიკული შემთხვევუის შემდეგ ლეგენდა გვაუწყებს მეოთხეე მეფის შესახებ - რომაელებმა ნუმა პომპილიუსის შვილიშვილი [[ანკუს მარციუსი]] აირჩიეს. იგი ღრმად მორწმუნე იყო და კარგი მეომარი. მან დაიპყრო ლათინები, მისი მეფობის დროს რომის სახელმწიფო ზღვამდე გაიზარდა და ახალმა მეფემ საპორტო ქალაქი ოსტია ააშენა. მან ასევე ააშენა ტიბრზე პირველი ხიდი და ციხე. ანკ მარციუსმა 24 წელი იმეფა ბრძულად.
 
-[[სურათი:Regiones Quattuor.gif|thumb|ქალაქი რომი სერვიუს ტულიუსის დროს]]
 ===ლუციუს ტარკვინიუს პრისკუსი===
 
 [[ანკუს მარციუსი]]ს მეფობის ბოლოს რომში გადმოსახლდა მდიდარი [[ეტრუსკები|ეტრუსკი]] [[ლუციუს ტარკვინიუს პრისკუსი]]. იგი მალე გახდა პოპულარული და მალე მოიპოვა გავლენა. ასე რომ მეფის სიკვდილის შემდეგ იგი რომაელებმა აირჩიეს მეფედ. ტარკვინიუსმა საბინების მიწები შემოიერთა, ააშენა რომში დიდი ცირკი. მან დიდხანს და ბრძნულად იმეფა, მაგრამ ანკუს მარციუსის შვილები თვლიდნენ, რომ ტარკვინიუსმა მათ ტახტი წაართვა და მიუგზავნეს მკვლელები.
 
+[[სურათი:Regiones Quattuor.gif|thumb|ქალაქი რომი სერვიუს ტულიუსის დროს]]
 ===სერვიუს ტულიუსი===
 
 შემდეგი მეფე [[სერვიუს ტულიუსი]] ტარკვინიუსის სახლში იყო გაზრდილი და მისი ქალიშვილი ჰყავდა ცოლად. ტარკვინიუსის მკვლელობის შემდეგ, მისმა ცოლმა სიძის გასამეფებლად ყველაფერი იღონა. მან გააძლიერა და გაამყარა რომის სახელმწიფო. მის სახელს უკავშირებენ რომის ტერიტორიულ გაყოფის და მოსახლეობის ქონებრივი ცენზის მიხედვით დაყოფის რეფორმებს. მან მშვიდობა დაამყარა ლაციუმში, ყველა მაცხოვრებელ ერს ააშენებინა რომში ქალღმერთ დიანას ტაძარი და ამით რომი ლაცინიუმის მთავარ ქალაქად აქცია. ტარკვინიუსის ვაჟი [[ლუციუს ტარკვინიუს სუპერბუსი]] ვერ შეეგუა სერვიუსის მეფობას, მოკლა საკუთარი ცოლი და ძმა, როს შემდეგაც ძმისცოლი შეირთო, რომელთან ერთადაც მოაწყო აჯანყება და მოაკვლევინეს მეფე.
