--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -90,7 +90,7 @@
 
 1 კლასი - 100 ათას ასზე მეტი.
 
-2 კლასი - 75 ათასი [[ასი]].
+2 კლასი - 75 ათასი [[რომაული ფულადი სისტემა|ასი]].
 
 3 კლასი - 50 ათასი ასი. 
 
