/* ძველ რომაული კულტურა და რელიგია */

--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -104,7 +104,7 @@
 
 [[ლათინური დამწერლობა]] ჯერ კიდევ მეფობის დროს შეიქმნა [[ბერძნული დამწერლობა|ბერძნული დამწერლობის]] საფუძველზე. ისტორიკოსი [[დიონისე ჰალიკარნასელი]] (ახ. წ. I საუკუნე) ამტკიცებდა რომ საკუთარი თვალით ჰქონდა ნანახი მეფე სერვიუს ტულიუსის და ლათინური ქალაქების ხელშეკრულება ქალღმერთ დიანას ტაძრის ერთობლივი მშენებლობის შესახებ. ეს წარწერა, როგორც იგი იუწყება, სპილენძზე იყო ამობეჭდილი, ხოლო ასოები ფორმით ძველ ბერძნულს წააგავდა.
 
-[[1900]] წელს რომის ფორუმის გათხრებისას აღმოაჩინეს ლეგენდარული მეფის რომულუსის შაფლავის შავი ქვა წარწერით, მაგრამ ამ წარწერის გაშიფრვა ვერ განხორციელდა, ალბათ მასზე შელოცვები წერია. 
+[[1900]] წელს რომის ფორუმის გათხრებისას აღმოაჩინეს ლეგენდარული მეფის რომულუსის საფლავის შავი ქვა წარწერით, მაგრამ ამ წარწერის გაშიფრვა ვერ განხორციელდა, ალბათ მასზე შელოცვები წერია. 
 
 ამ პერიოდის ხალხურ პოეზიას ჩვენამდე არ მოუღწევია, თუმცა მოგვიანებით ნაწარმოებებში არის რელიგიური ჰიმნების ფრაგმენტები, რომლებიც ალბათ ამ დროს იყო შექმნილი.
 
