/* მმართველობა და რეფორმები */

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -26,7 +26,9 @@
 [[სურათი:Regiones Quattuor.gif|thumb|რომის ოთხ ტრიბად გაყოფის სქემა]]
 მეფემ ქალაქი დაყო ოთხ ნაწილად - ტრიბებად. ამ ტრიბებს თავდაპირველ სამ ტრიბთან საერთო არაფერი აღარ ჰქონდათ. ისტორიკოსი [[ფლავიუს პიქტორუსი|ფლავიუს პიქტორუსის]] ცნობეით მოსახლეობის აღწერისას 80 000 ბრძოლისუნარიანი მამაკაცი გამოვლინდა. მოსახლეობის მატებასთან ერთად გაიზარდა ქალაქის საზღვრებიც.
 
-ტომის სახელმწიფო საკმარისად იყო იარაღის ძალით გამაგრებული, მაგრამ სერვიუსმა ჩათვალა რომ კულტურულადაც უნდა გაემაგრებინა. ამისთვის მან
+ტომის სახელმწიფო საკმარისად იყო იარაღის ძალით გამაგრებული, მაგრამ სერვიუსმა ჩათვალა რომ კულტურულადაც უნდა გაემაგრებინა. ამისთვის მან ლათინურ ქალაქებთან კავშირში ააგო ქალღმერთ [[დიანა|დიანას]] ტაძარი რომში. ამით რომი უკვე უეჭველი ლიდერი გახდა ლაციუმში.
+
+სერვიუსს საკმარისი ძალაუფლება ჰქონდა და მისი მდგომარეობა ტახტზე მყარი იყო, მაგრამ როდესაც გაიგო ახალგაზრდა ტარკვინიუსის საუბარი იმის შესახებ რომ იგი ხალხის თანხმობის გარეშე მართავს, მოაწყო კენჭისყრა, სურთ თუ არა რომაელებს რომ მან კვლავაც იმეფოს. ხალხმა იგი ერთსულოვნად აირჩია მეფედ. მიუხედავად ამისა ახალგაზრდა ტარკვინიუსი სენატორებთან განაგრძობდა სერიუსის ლანზღვას.
 
 ==მკვლელობა==
 
