--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -30,6 +30,7 @@
 
 ==მკვლელობა==
 
+სერვიუსს საკმარისი ძალაუფლება ჰქონდა და მისი მდგომარეობა ტახტზე მყარი იყო, მაგრამ როდესაც გაიგო ახალგაზრდა ტარკვინიუსის საუბარი იმის შესახებ რომ იგი ხალხის თანხმობის გარეშე მართავს, მოაწყო კენჭისყრა, სურთ თუ არა რომაელებს რომ მან კვლავაც იმეფოს. ხალხმა იგი ერთსულოვნად აირჩია მეფედ. მიუხედავად ამისა ახალგაზრდა ტარკვინიუსი სენატორებთან განაგრძობდა სევრიუსის ლანძღვას.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
