--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -32,6 +32,8 @@
 
 სერვიუსს საკმარისი ძალაუფლება ჰქონდა და მისი მდგომარეობა ტახტზე მყარი იყო, მაგრამ როდესაც გაიგო [[ლუციუს ტარკვინიუს სუპერბუსი|ახალგაზრდა ტარკვინიუსის]] საუბარი იმის შესახებ რომ იგი ხალხის თანხმობის გარეშე მართავს, მოაწყო კენჭისყრა, სურთ თუ არა რომაელებს რომ მან კვლავაც იმეფოს. ხალხმა იგი ერთსულოვნად აირჩია მეფედ. მიუხედავად ამისა ახალგაზრდა ტარკვინიუსი სენატორებთან განაგრძობდა სევრიუსის ლანძღვას. ეს ახალგაზრდა ტარკვინიუსი ლუციუს ტარკვინიუსის ვაჟი იყო თუ შვილიშვილი ზუსტად უცნობია, ზოგ რომაელ ავტორს მიაჩნია რომ იგი შვილი იყო, ზოგიც თვლის რომ შვილიშვილი, ხოლო იქედან გამომდინარე, რომ სერვიუს ტულიუსმა 44 წელი იმეფა, ლუციუსის სვილი ახალგაზრდა ვეღარ იქნებოდა, თუმცა ისტორიკოსი [[ტიტუს ლივიუსი]] ეჭვის მიუხედავად მას სხვა ისტორიკოსების თანახმად შვილს უწოდებს.
 
+ასეა თუ ისე, მას ჰყავდა ძმა არუნტუს ტარკვინიუსი, როგორც უკვე ვთქვით, ორივე ძმა მეფის ქალიშვილებზე იყვნენ დაქორწინებულნი.
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
