--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -32,7 +32,9 @@
 
 სერვიუსს საკმარისი ძალაუფლება ჰქონდა და მისი მდგომარეობა ტახტზე მყარი იყო, მაგრამ როდესაც გაიგო [[ლუციუს ტარკვინიუს სუპერბუსი|ახალგაზრდა ტარკვინიუსის]] საუბარი იმის შესახებ რომ იგი ხალხის თანხმობის გარეშე მართავს, მოაწყო კენჭისყრა, სურთ თუ არა რომაელებს რომ მან კვლავაც იმეფოს. ხალხმა იგი ერთსულოვნად აირჩია მეფედ. მიუხედავად ამისა ახალგაზრდა ტარკვინიუსი სენატორებთან განაგრძობდა სევრიუსის ლანძღვას. ეს ახალგაზრდა ტარკვინიუსი ლუციუს ტარკვინიუსის ვაჟი იყო თუ შვილიშვილი ზუსტად უცნობია, ზოგ რომაელ ავტორს მიაჩნია რომ იგი შვილი იყო, ზოგიც თვლის რომ შვილიშვილი, ხოლო იქედან გამომდინარე, რომ სერვიუს ტულიუსმა 44 წელი იმეფა, ლუციუსის სვილი ახალგაზრდა ვეღარ იქნებოდა, თუმცა ისტორიკოსი [[ტიტუს ლივიუსი]] ეჭვის მიუხედავად მას სხვა ისტორიკოსების თანახმად შვილს უწოდებს.
 
-ასეა თუ ისე, მას ჰყავდა ძმა არუნტუს ტარკვინიუსი, როგორც უკვე ვთქვით, ორივე ძმა მეფის ქალიშვილებზე იყვნენ დაქორწინებულნი.
+ასეა თუ ისე, მას ჰყავდა ძმა არუნტუს ტარკვინიუსი, როგორც უკვე ვთქვით, ორივე ძმა მეფის ქალიშვილებზე იყვნენ დაქორწინებულნი. ლუციუსი ძალიან პატივმოყვარე იყო, ხოლო არუნტუსი ბუნებით დინჯი იყო. მათი მეუღლეები ქმრებს ხასიათებით სულ არ ჰგავდნენ. არუნტუსის მეუღლეს ტულიას არ უყვარდა თავისი ქმარი, ხოლო მაზლით აღფრთოვანებული იყო. მას თავისი დაც სძულდა, ვინაიდან მიაჩდა რომ იგი სათანადოდ ვერ აფასებს ქმარს.
+
+მან მალე დაარწმუნა მაზლი რომ ისინი ბევრად უკეთესად შეეწყობოდნენ ერთმანეთს ვიდრე ეწყობიან საკუთარ მეუღლეებს და მიახწევდნენ ძალაუფლებას. შემდეგ მათ საიდულოთ მოკლეს მეუღლეები და დაქორწინდნენ.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
