--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -34,7 +34,7 @@
 
 ასეა თუ ისე, მას ჰყავდა ძმა არუნტუს ტარკვინიუსი, როგორც უკვე ვთქვით, ორივე ძმა მეფის ქალიშვილებზე იყვნენ დაქორწინებულნი. ლუციუსი ძალიან პატივმოყვარე იყო, ხოლო არუნტუსი ბუნებით დინჯი იყო. მათი მეუღლეები ქმრებს ხასიათებით სულ არ ჰგავდნენ. არუნტუსის მეუღლეს ტულიას არ უყვარდა თავისი ქმარი, ხოლო მაზლით აღფრთოვანებული იყო. მას თავისი დაც სძულდა, ვინაიდან მიაჩდა რომ იგი სათანადოდ ვერ აფასებს ქმარს.
 
-მან მალე დაარწმუნა მაზლი რომ ისინი ბევრად უკეთესად შეეწყობოდნენ ერთმანეთს ვიდრე ეწყობიან საკუთარ მეუღლეებს და მიახწევდნენ ძალაუფლებას. შემდეგ მათ საიდულოთ მოკლეს მეუღლეები და დაქორწინდნენ.
+მან მალე დაარწმუნა მაზლი რომ ისინი ბევრად უკეთესად შეეწყობოდნენ ერთმანეთს ვიდრე ეწყობიან საკუთარ მეუღლეებს და მიახწევდნენ ძალაუფლებას. შემდეგ მათ საიდულოთ მოკლეს მეუღლეები და დაქორწინდნენ. ტარკვინია ამის შემდეგ ყველანაერად აგულიანებდა ქმარს ახალი მკვლელობისთვის. ლუციუსმა ყველაფერი იღონა სენატსი გავლენის მოსაპოვებლად, ხოლო როდესაც ჩათვალა რომ ნიადაგი მომზადებულია, შეიარაღებული ხალხითურთ შეიჭრა ფორუმზე და თავი მეფედ გამოაცხადა, ბრძანა შეეკრიბათ სენატი მეფე ტარკვინიუსის სახელით.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
