--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -36,6 +36,10 @@
 
 მან მალე დაარწმუნა მაზლი რომ ისინი ბევრად უკეთესად შეეწყობოდნენ ერთმანეთს ვიდრე ეწყობიან საკუთარ მეუღლეებს და მიახწევდნენ ძალაუფლებას. შემდეგ მათ საიდულოთ მოკლეს მეუღლეები და დაქორწინდნენ. ტარკვინია ამის შემდეგ ყველანაერად აგულიანებდა ქმარს ახალი მკვლელობისთვის. ლუციუსმა ყველაფერი იღონა სენატსი გავლენის მოსაპოვებლად, ხოლო როდესაც ჩათვალა რომ ნიადაგი მომზადებულია, შეიარაღებული ხალხითურთ შეიჭრა ფორუმზე და თავი მეფედ გამოაცხადა, ბრძანა შეეკრიბათ სენატი მეფე ტარკვინიუსის სახელით.
 
+კურიაში სენატორთა თანდასწრებით დაიწყო სერვიუს ტულიუსის ლანძღვა. ამ დროს სერვიუსი თვითონ გამოცხადდა კურიაში. სერვიუსისა და ტარკვინიუსის მომხრეებს შორის ხელჩართული ბრძოლა გაიმართა. თვითონ ტარკვინიუსი ეცა სერვიუსს, და ვინაიდან იგი ბევრად უმცროსი და ძლიერი იყო, ჩამოაგდო მეფე კიბიდან, შემდეგ კი ქუჩაში თავისი მომხრეები დააწია და მოაკვლევინა მეფე.
+
+როგორც ისტორიკოსი გვამცნობებს, ამის შემდეგ ტულია ეტლით მივიდა კურიასთან და ქმარს უწოდა მეფე, ხოლო სახლში დაბრუნებისას ქუჩაში მამის გვამი დაინახა და ეტლით ზედ გადაუარა. მ ქუჩას რომაელებმა წყეული ქუჩა უწოდეს.
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
