--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -40,6 +40,8 @@
 
 როგორც ისტორიკოსი გვამცნობებს, ამის შემდეგ ტულია ეტლით მივიდა კურიასთან და ქმარს უწოდა მეფე, ხოლო სახლში დაბრუნებისას ქუჩაში მამის გვამი დაინახა და ეტლით ზედ გადაუარა. მ ქუჩას რომაელებმა წყეული ქუჩა უწოდეს.
 
+ამრიგად სერვიუს ტულიუსმა 44 წელი იმეფა, მასთან ერთად დაიღუპა სამართლიანი სამეფო ხელისუფლება, რამაც კიდევ უფრო გაზარდა მისი დიდება სიკვდილის შემდეგ.
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
