*Empty MediaWiki Message*

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -1,5 +1,6 @@
 '''ლუციუს სუპერბუს ტარკვინიუსი'''  (''[[ლათინური ენა|ლათ.]]'' Lucius Tarquinius Superbus)  (* უცნობია ―   †  [[ძვ. წ. 495]]), რომაული ტრადიციით, რომის უკანასკნელი მე-7 მეფე ([[ძვ. წ. 535]] - [[ძვ. წ. 510]]).
 
+==წარმოშვება და გამეფება==
 
 {{ესკიზი}}    
 
