*Empty MediaWiki Message*

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -2,7 +2,7 @@
 
 ==წარმოშვება და გამეფება==
 
-{{ესკიზი}}    
+ლუციუს ტარკვინიუსი, მოგვიანებით ამაყად (Superbus) წოდებული, [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუს პრისკუსის]] ვაჟი იყო თუ შვილიშვილი ზუსტად უცნობია, ზოგ რომაელ ავტორს მიაჩნია რომ იგი შვილი იყო, ზოგიც თვლის რომ შვილიშვილი, ხოლო იქედან გამომდინარე, რომ სერვიუს ტულიუსმა 44 წელი იმეფა, ლუციუსის შვილი ახალგაზრდა ვეღარ იქნებოდა, თუმცა ისტორიკოსი [[ტიტუს ლივიუსი]] ეჭვის მიუხედავად მას სხვა ისტორიკოსების თანახმად შვილს უწოდებს.
 
 
 <center>
