/* წარმოშვება და გამეფება */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -4,6 +4,11 @@
 
 ლუციუს ტარკვინიუსი, მოგვიანებით ამაყად (Superbus) წოდებული, [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუს პრისკუსის]] ვაჟი იყო თუ შვილიშვილი ზუსტად უცნობია, ზოგ რომაელ ავტორს მიაჩნია რომ იგი შვილი იყო, ზოგიც თვლის რომ შვილიშვილი, ხოლო იქედან გამომდინარე, რომ სერვიუს ტულიუსმა 44 წელი იმეფა, ლუციუსის შვილი ახალგაზრდა ვეღარ იქნებოდა, თუმცა ისტორიკოსი [[ტიტუს ლივიუსი]] ეჭვის მიუხედავად მას სხვა ისტორიკოსების თანახმად შვილს უწოდებს.
 
+[[სერვიუს ტულიუსი|სერვიუს ტულიუსმა]] მას და მის ძმას არუნტუს თავისი ქალიშვილები მიათხოვა. ლუციუსი ძალიან პატივმოყვარე იყო, ხოლო არუნტუსი ბუნებით დინჯი იყო. მათი მეუღლეები ქმრებს ხასიათებით სულ არ ჰგავდნენ. არუნტუსის მეუღლეს ტულიას არ უყვარდა თავისი ქმარი, ხოლო მაზლით აღფრთოვანებული იყო. მას თავისი დაც სძულდა, ვინაიდან მიაჩდა რომ იგი სათანადოდ ვერ აფასებს ქმარს.
+მან მალე დაარწმუნა მაზლი რომ ისინი ბევრად უკეთესად შეეწყობოდნენ ერთმანეთს ვიდრე ეწყობიან საკუთარ მეუღლეებს და მიახწევდნენ ძალაუფლებას. შემდეგ მათ საიდულოთ მოკლეს მეუღლეები და დაქორწინდნენ. ტარკვინია ამის შემდეგ ყველანაერად აგულიანებდა ქმარს ახალი მკვლელობისთვის. ლუციუსმა ყველაფერი იღონა სენატსი გავლენის მოსაპოვებლად, ხოლო როდესაც ჩათვალა რომ ნიადაგი მომზადებულია, შეიარაღებული ხალხითურთ შეიჭრა ფორუმზე და თავი მეფედ გამოაცხადა, ბრძანა შეეკრიბათ სენატი მეფე ტარკვინიუსის სახელით.
+კურიაში სენატორთა თანდასწრებით დაიწყო სერვიუს ტულიუსის ლანძღვა. ამ დროს სერვიუსი თვითონ გამოცხადდა კურიაში. სერვიუსისა და ტარკვინიუსის მომხრეებს შორის ხელჩართული ბრძოლა გაიმართა. თვითონ ტარკვინიუსი ეცა სერვიუსს, და ვინაიდან იგი ბევრად უმცროსი და ძლიერი იყო, ჩამოაგდო მეფე კიბიდან, შემდეგ კი ქუჩაში თავისი მომხრეები დააწია და მოაკვლევინა მეფე.
+როგორც ისტორიკოსი გვამცნობებს, ამის შემდეგ ტულია ეტლით მივიდა კურიასთან და ქმარს უწოდა მეფე, ხოლო სახლში დაბრუნებისას ქუჩაში მამის გვამი დაინახა და ეტლით ზედ გადაუარა. მ ქუჩას რომაელებმა წყეული ქუჩა უწოდეს.
+ამრიგად სერვიუს ტულიუსმა 44 წელი იმეფა, მასთან ერთად დაიღუპა სამართლიანი სამეფო ხელისუფლება, რამაც კიდევ უფრო გაზარდა მისი დიდება სიკვდილის შემდეგ.
 
 <center>
 <table border=1>
