--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -13,6 +13,8 @@
 
 ==მმართველობა==
 
+თავისი მმართველობის დასაწყისშივე მან დახოცა სერვიუსის მომხრე სენატორები. რადგან მან თვითონ შექმნა ძალით ხელისუფლების მოპოვების პრეცენდენტი, მას ეშინოდა რომ მის მოწინააღმდეგეებსაც იგივე არ გაეკეთებინათ და პირად მცველთა რაზმი შემოირტყა გარს.
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
