--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -13,7 +13,7 @@
 
 ==მმართველობა==
 
-თავისი მმართველობის დასაწყისშივე მან დახოცა სერვიუსის მომხრე სენატორები. რადგან მან თვითონ შექმნა ძალით ხელისუფლების მოპოვების პრეცენდენტი, მას ეშინოდა რომ მის მოწინააღმდეგეებსაც იგივე არ გაეკეთებინათ და პირად მცველთა რაზმი შემოირტყა გარს.
+თავისი მმართველობის დასაწყისშივე მან დახოცა სერვიუსის მომხრე სენატორები. რადგან მან თვითონ შექმნა ძალით ხელისუფლების მოპოვების პრეცენდენტი, მას ეშინოდა რომ მის მოწინააღმდეგეებსაც იგივე არ გაეკეთებინათ და პირად მცველთა რაზმი შემოირტყა გარს. ხალხის კიდევ უფრო მეტად დასაშინებლად მან დამატებით რეპრესიებს მიმართა. მისი რეპრესიებისგან შეთხელებულ სენატს იგი ანგარიშს არაფერში არ უწევდა. მან განიძრახა ლათინებთან დაახლოვება, რათა მათი მხარდაჭერით განემტკიცებინა საკუთარ ხალხში მდგომარეობა. ამისთვის მან თავისი ქალიშვილი ლათინების მმართველს ოქტავიანე მემილიუს ტუსკულას მიათხოვა.
 
 ==დამხობა და რომიდან გაძევება==
 
