--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -15,6 +15,8 @@
 
 თავისი მმართველობის დასაწყისშივე მან დახოცა სერვიუსის მომხრე სენატორები. რადგან მან თვითონ შექმნა ძალით ხელისუფლების მოპოვების პრეცენდენტი, მას ეშინოდა რომ მის მოწინააღმდეგეებსაც იგივე არ გაეკეთებინათ და პირად მცველთა რაზმი შემოირტყა გარს. ხალხის კიდევ უფრო მეტად დასაშინებლად მან დამატებით რეპრესიებს მიმართა. მისი რეპრესიებისგან შეთხელებულ სენატს იგი ანგარიშს არაფერში არ უწევდა. მან განიძრახა ლათინებთან დაახლოვება, რათა მათი მხარდაჭერით განემტკიცებინა საკუთარ ხალხში მდგომარეობა. ამისთვის მან თავისი ქალიშვილი ლათინების მმართველს ოქტავიანე მემილიუს ტუსკულას მიათხოვა.
 
+ომში იგი ისეთივე ვერაგი იყო, როგორც მშვიდობიანობისას უსამართლო. პირველი ომი მას ბოლსკებთან ჰქნდა. უცნობია თუ საიდან გადმოსახლდა ეს ერი, რომაელები მათ ორასი წლის მანძილზე ებრძოდნენ, სადამ არ დაიმორჩილეს და არ გაარომაელეს.
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
