--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -17,6 +17,8 @@
 
 ომში იგი ისეთივე ვერაგი იყო, როგორც მშვიდობიანობისას უსამართლო. პირველი ომი მას ბოლსკებთან ჰქნდა. უცნობია თუ საიდან გადმოსახლდა ეს ერი, რომაელები მათ ორასი წლის მანძილზე ებრძოდნენ, სადამ არ დაიმორჩილეს და არ გაარომაელეს.
 
+შემდეგ დაიწყო ომი ქალაქ გაბიუმთან. პირველ ბრძოლაში რომაელები დამარცხდნენ, ამიტომ ლუციუსმა გადაწყვირა არარომაულად, ვერაგობით ემოქმედა. მან მოაჩვენა ყველას, ვითომ აღარ სურს ომი და დაიწყო ტაძრის მშენებობა. ამასობაში მისი ვაჟი სექსტუსი გაიქცა გაბიაში და სთხოვა იქაურ მმართველს თავსესაფარი, მან მოიგონა თითქოს მამის სისასტიკეს გამოექცა.
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
