--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -19,7 +19,7 @@
 
 შემდეგ დაიწყო ომი ქალაქ გაბიუმთან. პირველ ბრძოლაში რომაელები დამარცხდნენ, ამიტომ ლუციუსმა გადაწყვირა არარომაულად, ვერაგობით ემოქმედა. მან მოაჩვენა ყველას, ვითომ აღარ სურს ომი და დაიწყო ტაძრის მშენებობა. ამასობაში მისი ვაჟი სექსტუსი გაიქცა გაბიაში და სთხოვა იქაურ მმართველს თავსესაფარი, მან მოიგონა თითქოს მამის სისასტიკეს გამოექცა. მისი მონაყოლი დაიჯერეს და გაბიუმელებმა იგი კარგად მიიღეს.
 
-აქ სექსტმა არა ღიად, არამედ ჩუმჩუმად დაარწმუნა გაბიუმელი უხუცესები ომის განახლების საჭიროებაში.
+აქ სექსტმა არა ღიად, არამედ ჩუმჩუმად დაარწმუნა გაბიუმელი უხუცესები ომის განახლების საჭიროებაში. მცირე რაცმებით იგი ძარცვავდა რომის მიდამოებს და შეტაკებებში ყოველთვის იმარჯვებდა, ამან მას გაბიუმელების ნდობა მოუპოვა. ამის გარდა მან ინტრიგებით გადაკიდა ერთამეთზე უხუცესები. ბევრი მათგანი თვითონ მოსპო და ბრალად სხვადასხვა დანაშაულებები დასდო. ამგვარად დასუსტებული გაბიუმი ტარკვინიუსმა ადვილად ჩაიგდო ხელში.
 
 ==დამხობა და რომიდან გაძევება==
 
