--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -1,14 +1,13 @@
-'''სერვიუს ტულიუსი''' (''[[ლათინური ენა|ლათ.]]'' Servius Tullius) (*უცნობია ―   †  
-[[ძვ. წ. 535]], მოკლულ იქნა), რომის მეექვსე მეფე (ძვ. წ.578 - ძვ. წ. 534)
+{{სტილი}}
 
-==წარმოშვება და გამეფება==
+'''სერვიუს ტულიუსი''' (''[[ლათინური ენა|ლათ.]]'' Servius Tullius) (*უცნობია ―   † [[ძვ. წ. 535]], მოკლულ იქნა), [[ძველი რომი|რომის]] მეექვსე მეფე ეტრუსკელთა დინასტიიდან (მეფობდა ძვ. წ.578 - ძვ. წ. 534)
 
-სერვიუს ტულიუსი წარმოშვებით ლათინური ქალაქ [[კორნიკულუსი|კორნიკულუსიდან]] იყო. მამამისი სტურიუს ტულიუსი, ქალაქის ერთერთი საუკეთესო მოქალაქე, რომაელებთან ბრძოლაში დაიღუპა, როდესაც [[ტარკვინიუსი,_ლუციუს_პრისკუს|ტარკვინიუს პრისკუსმა]] აიღო ქალაქი. ფეხმძიმე დედამისი ტყვედ ჩავარდა. ტარკვინიუსის მეუღლემ ამოუცნო იგი ტყვეებს შორის და საკუთარ სახლში მიიღო. აქ დაიბადა რომის მომავალი მეფე სერვიუს ტულიუსი. ბავშვობიდანვე ჩანდა რომ იგი ძალიან ჭკვიანი და ნიჭიერია, ამიტომ მეფემ იგი როგორც საკუთარი შვილი ისე გაზარდა, მას ქალისვილი მიათხოვა და თავის მემკვიდრეთ განიხილავდა.
+==წარმოშობა და გამეფება==
+გადმოცემის თანახმად სერვიუს ტულიუსი წარმოშობით ლათინური ქალაქ [[კორნიკულუსი|კორნიკულუსიდან]] იყო. მამამისი სტურიუს ტულიუსი, ქალაქის ერთერთი საუკეთესო მოქალაქე, რომაელებთან ბრძოლაში დაიღუპა, როდესაც [[ტარკვინიუსი, ლუციუს პრისკუს|ტარკვინიუს პრისკუსმა]] აიღო ქალაქი. ფეხმძიმე დედამისი ტყვედ ჩავარდა. ტარკვინიუსის მეუღლემ ამოიცნო იგი ტყვეებს შორის და საკუთარ სახლში მიიღო. აქ დაიბადა რომის მომავალი მეფე სერვიუს ტულიუსი. ბავშვობიდანვე ჩანდა რომ იგი ძალიან ჭკვიანი და ნიჭიერი იყო, ამიტომ მეფემ იგი საკუთარი შვილივით გაზარდა, საკუთარი ქალიშვილი მიათხოვა და მემკვიდრედ მიიჩნევდა.
 
 ტარკვინიუსზე თავდასხმის შემდეგ ტანაკვილმა დამალა მისი სიკვდილის ფაქტი და მეფის ავადმყოფობის გამო მისი მოვალეობების შემსრულებლად სერვიუსი გამოაცხადა. რამდენიმე დღე სერვიუსი ასრულებდა მეფის ფუნქციებს, ზოგ გადაწყვეტილებებს თვითონ იღებდა, ზოგს კი სამომავლოდ დებდა, ვითომდა მეფესთან უნდა მოეთათბირებინა. ამრიგად როდესაც ტარკვინიუსის სიკვდილის ფაქტი გახმაურდა სერვიუსის მდგომარეობა ტახტზე უკვე მყარი იყო.
 
 ==მმართველობა და რეფორმები==
-
 სერვიუსმა თავისი ქალიშვილები ტარკვინიუსის ვაჟებზე გაათხოვა, რათა არ გამეორებულიყო იგივე ამბავი რაც ტარკვინიუსსა და [[ანკუს მარციუსი|ანკუს მარციუსის]] ვაჟებს შორის მოხდა, მაგრამ ამ ზომებმა მომავალსი არ გაამართლა.
 
 ეტრუსკებთან ზავის ვადა ამოიწურა, ამიტომ მან განაახლა მათთან ომი, სადაც ბრწყინვალეთ გაიმარჯვა. ამის შემდეგ იგი სამოქალაქო რეფორმებს შეუდგა, მან ჩამოაყალიბა მოსახლეობის ქონებრივი ცენზით დაყოფა, ეს მნიშვნელოვანი იყო, ვინაიდან მანამდე მოვალეობების დაკისრება ხდებოდა სულ მოსახლეზე, ახლა კი ქონებრივი ცენზის მიხედვით.
