--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -21,6 +21,8 @@
 
 აქ სექსტმა არა ღიად, არამედ ჩუმჩუმად დაარწმუნა გაბიუმელი უხუცესები ომის განახლების საჭიროებაში. მცირე რაცმებით იგი ძარცვავდა რომის მიდამოებს და შეტაკებებში ყოველთვის იმარჯვებდა, ამან მას გაბიუმელების ნდობა მოუპოვა. ამის გარდა მან ინტრიგებით გადაკიდა ერთამეთზე უხუცესები. ბევრი მათგანი თვითონ მოსპო და ბრალად სხვადასხვა დანაშაულებები დასდო. ამგვარად დასუსტებული გაბიუმი ტარკვინიუსმა ადვილად ჩაიგდო ხელში.
 
+ამ ამბების შემდეგ მან დაასრულა კაპიტოლიუმზე იუპიტერის ტაძრის მშენებლობა, რომელიც პირველმა ტარკვინიუსმა დაიწყო. დაახლოვებით ამ დროს, როგორც ისტორიკოდი ტიტუს ლივიუსი გვამცნობს, სასახლის სვეტიდან გამოძვრა გველი. ეს სიკვდილის ამღნიშნავი იყო. ამ ამბის განსამარტად მან [[დელფის ორაკული|დელფის ორაკულთან]] გაგზავნა თავისი ვაჟები ტიტუსი და არუნტუსი და მათთან ერთად თავისი დისშვილი [[ლუციუს იუნიუს ბრუტუსი]].
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
