--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -23,6 +23,8 @@
 
 ამ ამბების შემდეგ მან დაასრულა კაპიტოლიუმზე იუპიტერის ტაძრის მშენებლობა, რომელიც პირველმა ტარკვინიუსმა დაიწყო. დაახლოვებით ამ დროს, როგორც ისტორიკოდი ტიტუს ლივიუსი გვამცნობს, სასახლის სვეტიდან გამოძვრა გველი. ეს სიკვდილის ამღნიშნავი იყო. ამ ამბის განსამარტად მან [[დელფის ორაკული|დელფის ორაკულთან]] გაგზავნა თავისი ვაჟები ტიტუსი და არუნტუსი და მათთან ერთად თავისი დისშვილი [[ლუციუს იუნიუს ბრუტუსი]].
 
+ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
