--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -25,6 +25,8 @@
 
 ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
 
+რომაელები ამ დროს რუტულების ქალაქ არდეუმთან ომობდენ. ეს იმ დროისთვის ერთერთი უმდიდრესი ქალაქი იყო, ტარკვინიუსის ფინანსური მდგომარეობა კი არასახარბიელო იყო, სწორედ ეს გახდა ომის მიზეზიც. პირველი შეტევა წარუმატებლად დასრულდა და რომაელებმა ქალაქს ალყა შემოარტყეს. ბანაკში სექსტ ტარკვინიუსი არისტოკრატ ახალგაზრდებთან ერთად ქეიფობდა. მათ შორის ტარკვინიუსის ნათესავი ტარკვინიუს კოლატინუსიც იყო. საუბარი შეეხო ცოლებსაც, კოლატინუსი ყველას არწმუნებდა რომ მისი ცოლი ლუკრეცია ყველაზე ღირსეული ქალი იყო.
+
 ==დამხობა და რომიდან გაძევება==
 
 <center>
