--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -25,7 +25,9 @@
 
 ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
 
-რომაელები ამ დროს რუტულების ქალაქ არდეუმთან ომობდენ. ეს იმ დროისთვის ერთერთი უმდიდრესი ქალაქი იყო, ტარკვინიუსის ფინანსური მდგომარეობა კი არასახარბიელო იყო, სწორედ ეს გახდა ომის მიზეზიც. პირველი შეტევა წარუმატებლად დასრულდა და რომაელებმა ქალაქს ალყა შემოარტყეს. ბანაკში სექსტ ტარკვინიუსი არისტოკრატ ახალგაზრდებთან ერთად ქეიფობდა. მათ შორის ტარკვინიუსის ნათესავი ტარკვინიუს კოლატინუსიც იყო. საუბარი შეეხო ცოლებსაც, კოლატინუსი ყველას არწმუნებდა რომ მისი ცოლი ლუკრეცია ყველაზე ღირსეული ქალი იყო.
+რომაელები ამ დროს რუტულების ქალაქ არდეუმთან ომობდენ. ეს იმ დროისთვის ერთერთი უმდიდრესი ქალაქი იყო, ტარკვინიუსის ფინანსური მდგომარეობა კი არასახარბიელო იყო, სწორედ ეს გახდა ომის მიზეზიც. პირველი შეტევა წარუმატებლად დასრულდა და რომაელებმა ქალაქს ალყა შემოარტყეს. ბანაკში სექსტ ტარკვინიუსი არისტოკრატ ახალგაზრდებთან ერთად ქეიფობდა. მათ შორის ტარკვინიუსის ნათესავი ტარკვინიუს კოლატინუსიც იყო. საუბარი შეეხო ცოლებსაც, კოლატინუსი ყველას არწმუნებდა რომ მისი ცოლი ლუკრეცია ყველაზე ღირსეული ქალი იყო. ყველამ ჩათვალა რომ რომში ჩასვლით და იმის ნახვით თუ როგორ შეეგებებოდნენ ცოლები უეცრად დაბრუნებულ ქმრებს, ყველაზე კარგად ასახავდა მათ მორალურ თვისებებს.
+
+რომში გვიან ღამით ჩავიდნენ და კოლატინუსის სახლს მიადგნენ, მეფის რძლებისგან განსხვავებით ლუკრეცია სახლში იყო და შალს რთავდა. ამრიგად ცოლების "შებიბრში" ლუკრეციამ გაიმარჯვა. სექსტ ტარკვინიუსს ნათესავის მეუღლე ძალიან მოეწონა. რამდენიმე დღის მერე სექსტუსი მარტო მივიდა ლუკრეციას სახლში. იქ მას კარგად გაუმასპინძლდნენ და სტუმრების ოთახში შესთავაზეს დაძინება. როდესაც სახლში ყველამ დაიძინა, სექსტუსი ლუკრეციას საძინებელში შეიპარა და დაემუქრა, რომ თუ იგი არ დანებდებოდა, იგი მას მაინც გააუპატიურებდა, მოკლავდა და მკვდარ მონას მიუწვენდა. ამ მუქარამ გაჭრა და ლუკრეცია დანებდა. როდესაც სექსტუსი წავიდა, ლუკრეციამ შიკრიკები გაუგზავნა ქმარს და მამას, ამცნო რომ ცუდი ამბავი მოხდა და რომ იცინი ერთგულ მეგობრებთან ერთად მოსულიყვნენ.
 
 ==დამხობა და რომიდან გაძევება==
 
