/* დამხობა და რომიდან გაძევება */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -33,7 +33,8 @@
 
 ==დამხობა და რომიდან გაძევება==
 
-
+==რესურსები ინტერნეტში==
+[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
 <center>
 <table border=1>
