*Empty MediaWiki Message*

--- a/რომის_მეფეების_სია.mw
+++ b/რომის_მეფეების_სია.mw
@@ -4,10 +4,11 @@
 *[[ანკუს მარციუსი]] - [[ძვ. წ. 641]]-[[ძვ. წ. 617|617]]
 *[[ლუციუს ტარკვინიუს პრისკუსი]] - [[ძვ. წ. 616]]-[[ძვ. წ. 579|579]]
 *[[სერვიუს ტულიუსი]] - [[ძვ. წ. 578]]-[[ძვ. წ. 535|535]]
-*[[ლუციუს ტარკვინიუს სუპერბუსი]] - [[ძვ. წ. 534]]-[[ძვ. წ. 510|510]]
+*[[ლუციუს ტარკვინიუს სუპერბუსი]] - [[ძვ. წ. 535]]-[[ძვ. წ. 510|510]]
 
 
 [[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის მეფეები]]
 
 [[da:Romerske konger]]
 [[de:Liste der altrömischen Könige]]
