/* დამხობა და რომიდან გაძევება */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -33,6 +33,8 @@
 
 ==დამხობა და რომიდან გაძევება==
 
+მოსახლეობამ როდესაც შეიტყო ამ ამაზრზენი ამბის შესახებ, აღშფოთდა, ბრუტუსმა კი შეკრებილ ახალგაზრდობას მოუწოდა შეიარაღებისკენ და აჯანყებისკენ. ფორუმზე რომ მივიდნენ ხალხი იქ უკვე შეკრებილი იყო. ბრუტუსმა მიმართა მათ და სექსტუსის უღის საქციელთან ერთად დაგმო ლუციუსის სიამაყე და უსამართლობაც.
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
