--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -33,7 +33,7 @@
 
 ==დამხობა და რომიდან გაძევება==
 
-მოსახლეობამ როდესაც შეიტყო ამ ამაზრზენი ამბის შესახებ, აღშფოთდა, ბრუტუსმა კი შეკრებილ ახალგაზრდობას მოუწოდა შეიარაღებისკენ და აჯანყებისკენ. ფორუმზე რომ მივიდნენ ხალხი იქ უკვე შეკრებილი იყო. ბრუტუსმა მიმართა მათ და სექსტუსის უღის საქციელთან ერთად დაგმო ლუციუსის სიამაყე და უსამართლობაც.
+მოსახლეობამ როდესაც შეიტყო ამ ამაზრზენი ამბის შესახებ, აღშფოთდა, ბრუტუსმა კი შეკრებილ ახალგაზრდობას მოუწოდა შეიარაღებისკენ და აჯანყებისკენ. ფორუმზე რომ მივიდნენ ხალხი იქ უკვე შეკრებილი იყო. ბრუტუსმა მიმართა მათ და სექსტუსის უღის საქციელთან ერთად დაგმო ლუციუსის სიამაყე და უსამართლობაც. მან მოუწოდა რომაელ ხალხს დაემხოთ მეფის მმართველობა რომში და სამეფო ოჯახი გაეძევებინათ.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
