*Empty MediaWiki Message*

--- a/მზე.mw
+++ b/მზე.mw
@@ -2,7 +2,7 @@
 '''მზე''' სპექტრული ტიპის G2V ყვითელი [[ვარსკვლავი|ვარსკვლავია]] [[მზის სისტემა|მზის სისტემის]] ცენტრში [[რძიანი გზა (გალაქტიკა)|რძიანი გზის]] [[გალაქტიკა|გალაქტიკაში]]. [[დედამიწა]] და სხვა [[ციური სხეული|ციური სხეულები]] (მათ შორის სხვა [[პლანეტა|პლანეტები]], [[ასტეროიდი|ასტეროოიდები]], [[მეტეორიდი|მეტეორიდები]], [[კომეტა|კომეტები]] და [[კოსმოსური მტვერი]]) მზის ირგვლის გარკვეულ [[ორბიტა|ორბიტაზე]] მოძრაობენ.
 
 {{ესკიზი}}
-
+{{მზის სისტემა}}
 [[კატეგორია:ვარსკვლავები]]
 [[კატეგორია:მზის სისტემა]]
 
