*Empty MediaWiki Message*

--- a/მარსი_(ღმერთი).mw
+++ b/მარსი_(ღმერთი).mw
@@ -2,3 +2,27 @@
 
 
 [[კატეგორია:რომაული მითოლოგია]]
+
+
+[[bg:Марс (бог)]]
+[[ca:Mart (mitologia)]]
+[[da:Mars (gud)]]
+[[de:Mars (Mythologie)]]
+[[en:Mars (god)]]
+[[eo:Marso (dio)]]
+[[es:Marte (mitología)]]
+[[fi:Mars (jumala)]]
+[[fr:Mars (mythologie)]]
+[[gl:Marte (deus)]]
+[[he:מרס (מיתולוגיה)]]
+[[it:Marte (mitologia)]]
+[[ja:マルス]]
+[[nl:Mars (god)]]
+[[nn:Guden Mars]]
+[[pl:Mars (mitologia)]]
+[[pt:Marte (mitologia)]]
+[[simple:Mars (god)]]
+[[sk:Mars (boh)]]
+[[sl:Mars (bog)]]
+[[sv:Mars (mytologi)]]
+[[zh:玛尔斯]]
