*Empty MediaWiki Message*

--- a/მარსი_(ღმერთი).mw
+++ b/მარსი_(ღმერთი).mw
@@ -1,4 +1,6 @@
+[[სურათი:მარსი.jpg|thumb|მარსი]]
 '''მარსი''' (''[[ლათინური ენა|ლათ.]] '''Mars''''') რომაულ მითოლოგიაში ომის ღმერთი.
+
 
 
 [[კატეგორია:რომაული მითოლოგია]]
