*Empty MediaWiki Message*

--- a/მარსი_(ღმერთი).mw
+++ b/მარსი_(ღმერთი).mw
@@ -2,6 +2,8 @@
 '''მარსი''' (''[[ლათინური ენა|ლათ.]] '''Mars''''') რომაულ მითოლოგიაში ომის ღმერთი.
 
 
+{{ესკიზი}}
+
 
 [[კატეგორია:რომაული მითოლოგია]]
 
