*Empty MediaWiki Message*

--- a/ტიბრი.mw
+++ b/ტიბრი.mw
@@ -1,3 +1,31 @@
-მდინარე იტალიაში
+[[სურათი:Tiber_river.jpg|thumbnail||300px|Tiber River in Rome]]
+'''მდინარე ტიბროსი''' (იტ. ''Tevere''), სიგრძით მესამე მდინარეა იტალიაში 406 კმ-ით მდ. პოსა და ადიგის შემდეგ; სათავეს იღებს მთა ფუმაიოლოდან და რომის გავლით ტირენეოსის ზღვაში ჩაედინება ორი განშტოებით.
+
+==სახელწოდება==
+სახელწოდება სავარაუდოდ ლათინოამდელია, რომაული სახელი ტიბურის მსგავსად (თანამ. ტივოლი). მითიური მეფე ტიბერინუსი, მეცხრე ლეგენდარული ალბა-ლონგას მეფეთა სიიდან, ლეგენდის თანახმად მდინარე ალბულაში დამხრჩვალა, რის გამოც მას შემდეგ ტიბროსი დაერქვა. სახელი შესაძლოა ასევე მომდინარეობდეს ინდო-ევროპულამდელი ენიდან "თეთრი" დანალექით. ასევე ლეგენდის თანახმად, რომის დამფუძნებლები, ტყუპი ძმები [[რომულუსი|რომულუსი და რემუსი]] ამ მდინარეში გადაარჩინა ძუ მგელმა.
+
+==ისტორია==
 
 {{ესკიზი}}
+
+[[კატეგორია:იტალიის მდინარეები]]
+[[კატეგორია:რომი]]
+
+[[bg:Тибър]]
+[[be:Тыбр]]
+[[ca:Tíber]]
+[[cv:Тибр]]
+[[de:Tiber]]
+[[es:Tíber]]
+[[fr:Tibre]]
+[[it:Tevere]]
+[[he:טיבר]]
+[[la:Tiberis]]
+[[nl:Tiber]]
+[[ja:テヴェレ川]]
+[[no:Tiberen]]
+[[pl:Tyber]]
+[[pt:Rio Tibre]]
+[[ru:Тибр]]
+[[sl:Tibera]]
+[[sv:Tibern]]
